--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <h2>Countdown to new year</h2>
-    <div class="year">2023</div>
+    <div class="year">2024</div>
     <div class="countdown">
-        <div id="day">00</div>
+        <div id="day">Days</div>
+        <div id="hour">00</div>
+        <div id="minute">00</div>
+        <div id="seconds">00</div>
     </div>
 
     <script src="script.js"></script>
